# STM32F030F4-GCC-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Boot/: startup_stm32f030x6.s
Inc/: main.h  main.h.bak  stm32f0xx_hal_conf.h  stm32f0xx_it.h
